--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,9 +15,9 @@
 </header>
 
 <section class="flex-container">
-	<div>dfgdfgdfgdfgfd</div>
-	<div>hjfghfghfghfghgf</div>
-	<div>fghfghfghfghfghfg</div>
+	<div> Here will be my MP3 Project </div>
+	<div> Here will be Codesolo </div>
+	<div> And the last one will be a Download manager </div>
 </section>
 
 
